syntax="proto3";
package com.tutelary.message;
option java_outer_classname = "ClientCommandResponseMessage$$ByJProtobuf";
//
message ClientCommandResponseMessage {  
 string sessionId=1;
 string command=2;
 int32 commandType=3;
 int32 commandCode=4;
 Any data=5;
 bool status=6;
 string message=7;
}
message Any {  
 string codecClass=1;
 bytes byteArray=2;
}
